# hytale-server-watcher

./: Cargo.toml  README.md  config-watcher.json  package.json
src/: config.rs  main.rs
src/watcher/: backup.rs  mod.rs  process.rs  state.rs  stats.rs  telegram.rs
src/web/: api.rs  auth.rs  mod.rs  server.rs  websocket.rs
web-ui/: package-lock.json  package.json  vite.config.ts
web-ui/src/: global.css
web-ui/src/components/: AddServerModal.tsx
web-ui/src/components/dashboard/: ActionsCard.tsx  BackupsCard.tsx  LogViewer.tsx  ResourcesCard.tsx  StatusCard.tsx
web-ui/src/components/layout/: MobileNav.tsx  Sidebar.tsx
web-ui/src/lib/: api.ts  i18n-context.tsx  i18n.ts  types.ts
web-ui/src/routes/: index.tsx
web-ui/src/routes/settings/: index.tsx
