[package]
name = "server-watcher"
version = "0.3.0"
edition = "2021"
description = "Hytale server monitoring with web dashboard"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "sync", "macros", "rt-multi-thread"] }

# Web server
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client (for remote servers & telegram)
reqwest = { version = "0.11", features = ["json"] }

# System info
sysinfo = "0.32"

# Time
chrono = { version = "0.4", features = ["serde"] }

# TUI (optional, can be disabled)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# Encoding
encoding_rs = "0.8"

# Backup
tar = "0.4"
xz2 = "0.1"
walkdir = "2.5"

# Embed static files
rust-embed = "8.2"
mime_guess = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
tokio-util = { version = "0.7", features = ["io"] }

[features]
default = ["tui"]
tui = ["ratatui", "crossterm"]

[profile.release]
lto = true
strip = true
